--- a/www/Templates/Front/Home.html
+++ b/www/Templates/Front/Home.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 
+{% block header-curview-home %}class="selected"{% endblock %}
+
 {% block content %}
-Accueil content
+<div id="home-articles">
+
+</div>
+<div id="home-reservations">
+
+</div>
 {% endblock %}
