--- a/www/Templates/base.html
+++ b/www/Templates/base.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<title>{% block title %}Le paradis français{% endblock %}</title>
-   
+   		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />
 
 		{% block include %}
 		
@@ -17,10 +17,11 @@
 	<body>
 		<div id="header">
 		{% block header %}
+			<div id="banner"></div>
 			<ul id="menu">
-				<li><a href="#">Accueil</a></li>
-				<li><a href="{% url List %}">Carte</a></li>
-				<li><a href="#">Contact</a></li>
+				<li {% block header-curview-home %}{% endblock %}><a href="{% url Home %}">Accueil</a></li>
+				<li {% block header-curview-list %}{% endblock %}><a href="{% url List %}">Carte</a></li>
+				<li {% block header-curview-contact %}{% endblock %}><a href="{% url Contact %}">Contact</a></li>
 			</ul>
 		{% endblock %}
 		</div>
