--- a/www/Templates/Front/List.html
+++ b/www/Templates/Front/List.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block header-curview-list %}class="selected"{% endblock %}
 
@@ -7,36 +8,48 @@
 	<h1>Menus</h1>
 	<div id="menus">
 	{% for menu in menus %}
-		<p class="menu-elem">
-			<h2>{{ menu.name }}</h2>
-			<p>{{ menu.text }}</p>
-			<h4>{{ menu.price }}</h4>
-		</p>
+		<h2>
+		{% if not menu.name %}
+			{% blocktrans with price=menu.price %}Menu at {{ price }}&euro;{% endblocktrans %}
+		{% else %}
+			{{ menu.name }}
+		{% endif %}
+		</h2>
+		<p class="menu-text">{{ menu.text }}</p>
+		{% if menu.name %}
+			<h4>{{ menu.price }}&euro;</h4>
+		{% endif %}
 	{% endfor %}
 	</div>
-
+	<hr />
 	<h1>Carte</h1>
 	<div id="carte">
-		<h2>Entrées</h2>
-		<div id="entrees">
-		{% for entree in entrees %}
-			<p class="carte-elem">{{ entree.name }} - <span class="price">{{ entree.price }}</span></p>
-		{% endfor %}
-		</div>
+		{% if starters %}
+			<h2>{% trans "Starters" %}</h2>
+			<div id="starters">
+			{% for starter in starters %}
+				<p class="carte-elem">{{ starter.name }} - <span class="price">{{ starter.price }}&euro;</span></p>
+			{% endfor %}
+			</div>
+		{% endif %}
 
-		<h2>Viandes</h2>
-		<div id="viandes">
-		{% for viande in viandes %}
-			<p class="carte-elem">{{ viande.name }} - <span class="price">{{ viande.price }}</span></p>
-		{% endfor %}
-		</div>
+		{% if meats %}
+			<h2>{% trans "Meats" %}</h2>
+			<div id="meats">
+			{% for meat in meats %}
+				<p class="carte-elem">{{ meat.name }} - <span class="price">{{ meat.price }}&euro;</span></p>
+			{% endfor %}
+			</div>
+		{% endif %}
 
-		<h2>Desserts</h2>
-		<div id="desserts">
-		{% for dessert in desserts %}
-			<p class="carte-elem">{{ dessert.name }} - <span class="price">{{ dessert.price }}</span></p>
-		{% endfor %}
-		</div>
-		{% endblock %}
+		{% if desserts %}
+			<h2>{% trans "Desserts" %}</h2>
+			<div id="desserts">
+			{% for dessert in desserts %}
+				<p class="carte-elem">{{ dessert.name }} - <span class="price">{{ dessert.price }}&euro;</span></p>
+			{% endfor %}
+			</div>
+		{% endif %}
 	</div>
 </div>
+{% endblock %}
