--- a/www/Templates/Front/Contact.html
+++ b/www/Templates/Front/Contact.html
@@ -11,20 +11,27 @@
 <div id="contact" class="styled_box">
 	<div id="top_container">
 		<div id="contact_form">
-			<table cellspacing="0" cellpadding="0">
-				<tr>
-					<td class="label">{% trans "Name" %}</td>
-					<td class="value"><input type="text" name="name" /></td>
-				</tr>
-				<tr>
-					<td class="label">{% trans "E-mail" %}</td>
-					<td class="value"><input type="text" name="email" /></td>
-				</tr>
-				<tr>
-					<td class="label">{% trans "Message" %}</td>
-					<td class="value"><textarea name="message"></textarea></td>
-				</tr>
-			</table>
+			<form action="{% url Contact %}" method="POST" accept-charset="utf-8">
+				{% csrf_token %}
+				<table cellspacing="0" cellpadding="0">
+					<tr>
+						<td class="label">{% trans "Name" %}</td>
+						<td class="value">{{ form.sender_name }}</td>
+					</tr>
+					<tr>
+						<td class="label">{% trans "E-mail" %}</td>
+						<td class="value">{{ form.sender_email }}</td>
+					</tr>
+					<tr>
+						<td class="label">{% trans "Message" %}</td>
+						<td class="value">{{ form.message }}</td>
+					</tr>
+					<tr>
+						<td class="label"></td>
+						<td class="value"><input type="submit" value="{% trans "Send" %}"></td>
+					</tr>
+				</table>
+			</form>
 		</div>
 		<div id="address">
 			<p>
@@ -41,7 +48,7 @@
 	</div>
 	<h4>{% trans "Restaurant location" %}</h4>
 	<div id="map"></div>
-	<div id="map-tooltip-text">{% blocktrans %}Welcome to "Le Paradis Français" !<br />Quality restaurant.<br />Varied meals.{% endblocktrans %}</div>
+	<div id="map-tooltip-text">{% blocktrans %}Welcome to "Le Paradis Français" !<br />Quality restaurant.<br />Various dishes.{% endblocktrans %}</div>
 </div>
 <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 <script type="text/javascript" src="{{ STATIC_URL}}js/gmap3.min.js"></script>
