--- a/www/Templates/Front/Home.html
+++ b/www/Templates/Front/Home.html
@@ -16,15 +16,15 @@
 	<div class="pagination">
 	    <span class="step-links">
 	        {% if articles.has_previous %}
-	            <a href="?page={{ articles.previous_page_number }}">previous</a>
+	            <a href="?page={{ articles.previous_page_number }}"> {% trans "previous" %}</a>
 	        {% endif %}
 
 	        <span class="current">
-	            Page {{ articles.number }} of {{ articles.paginator.num_pages }}.
+	            {% blocktrans %}Page {{ articles.number }} of {{ articles.paginator.num_pages }}{% endblocktrans %}.
 	        </span>
 
 	        {% if articles.has_next %}
-	            <a href="?page={{ articles.next_page_number }}">next</a>
+	            <a href="?page={{ articles.next_page_number }}">{% trans "next" %}</a>
 	        {% endif %}
 	    </span>
 	</div>
@@ -40,7 +40,7 @@
 	{% endif %}
 	{% if reservation_form.errors %}
 		<p style="color: red;">
-		    Please correct the error{{ form.errors|pluralize }} below.
+		   {% blocktrans %} Please correct the error{{ form.errors|pluralize }} below {% endblocktrans %}.
 		</p>
 	{% endif %}
 	<form action="{% url Home %}" method="POST">
