add check for group reservation

--- a/www/Templates/Front/About.html
+++ b/www/Templates/Front/About.html
@@ -5,19 +5,22 @@
 
 {% block content %}
 <div id="about-us" class="styled_box">
-<h1>Le restaurant</h1>
+<h1>{% trans "Le restaurant" %}</h1>
 
 <p>
+{% blocktrans %}
 	Poussez les portes du restaurant Le paradis Francais et laissez-vous porter par l’atmosphère chaleureuse et reposante du lieu. Avec son décor sobre, design et raffiné, cet établissement est un réel havre de paix.
 
 	Au menu, vous pourrez profiter de la cuisine française traditionnelle que le Chef compose avec savoir-faire et expérience. La carte affiche également quelques spécialités auvergnates goûteuses et gourmandes.
 
 	Aux beaux jours, vous pourrez vous délecter de vos savoureux mets en terrasse tout en profitant du soleil. Et, pour vos événements festifs, la direction permet la privatisation du lieu.
 	Une adresse qui vaut le détour et qui ne manquera pas de séduire tous les amateurs de gastronomie ! À connaître et à faire connaître…
+{% endblocktrans %}
 </p>
 
-<h1>Le personnel</h1>
+<h1>{% trans "Le personnel" %}</h1>
 <p>
+{% blocktrans %}
 	Votre satisfaction ... un travail d'équipe
 
 	La préparation des aliments est assurée dans les restaurants gastronomiques par un ensemble de cuisiniers : la brigade.
@@ -29,24 +32,33 @@
 	Sommelier: 
 	Maitre restaurateur:
 	Associés:.cla
+{% endblocktrans %}
 </p>
-<h1>Tourisme</h1>
+<h1>{% trans "Tourisme" %}</h1>
 
-<h2>Grenoble</h2>
+<h2>{% trans "Grenoble" %}</h2>
 <p>
+{% blocktrans %}
 	Entouré des massifs du Vercors, de la Chartreuse et de la chaîne de Belledonne, Grenoble bénéficie d’un cadre idyllique. Stendhal décrivait ainsi sa ville natale : « Au bout de chaque rue, une montagne… ». La capitale des Alpes est donc particulièrement appréciée pour sa proximité avec les montagnes et les stations de ski.
+{% endblocktrans %}
 </p>
  
-<h2>La Bastille</h2>
+<h2>{% trans "La Bastille" %}</h2>
 <p>
+{% blocktrans %}
 	Cet ancien site fortifié est très apprécié des touristes et des Grenoblois. Il s'agit d'une construction militaire édifiée entre 1823 et 1848 dont les remparts, les casemates et les escaliers s'étendent sur près de 300 mètres de dénivelé. Elle offre un panorama exceptionnel sur l'agglomération de Grenoble et accueille 600 000 visiteurs par an. La moitié d'entre eux y accède par le téléphérique. Construit en 1934, c'est le premier téléphérique urbain au monde. Il est célèbre aujourd'hui pour ses cabines en forme de bulles transparentes, indissociables de l'image de la ville. La forteresse est aussi accessible à pied depuis la porte Saint Laurent ou en empruntant la montée Chalemont, via un sentier doté d'un parcours-santé, mais également à partir de la porte de France, en passant par le Jardin des Dauphins, perché sur une falaise. A faire: Monter sur la terrasse de la forteresse pour lire le paysage grâce aux tables d'orientation. Aller jusqu'au mémorial des Troupes alpines au sommet du mont Jalla à 635 m. Essayer la via ferrata située sur les falaises ouest, l'un des rares parcours en site urbain.
+{% endblocktrans %}
 </p>
-<h2>Le Jardin de ville</h2>
+<h2>{% trans "Le Jardin de ville" %}</h2>
 <p>
+{% blocktrans %}
 	Situé au coeur de la ville, cet espace vert est un havre de fraîcheur et de tranquilité. De nombreux bancs y sont disposés à l'ombre de platanes centenaires, tandis qu'en contre-bas, se trouve une roseraie avec quatre carrés d'herbes. A côté d'une aire de jeux pour enfants, un kiosque à musique datant de l'entre deux guerres sert de petite scène pour diverses occasions et notamment lors du festival Le Cabaret Frappé qui a lieu chaque été. C'est le Connétable de Lesdiguières qui conçut ce jardin en 1622. On y accède de la place Grenette en passant sous un porche, ce qui nous amène devant une statue de bronze, la Fontaine du Torrent. A voir: Les balustrades, les vases ornementaux et les trois fontaines abreuvoirs soutenant l'extrémité du parc La Fontaine du Torrent. Le Musée Stendhal.
+{% endblocktrans %}
 </p>
-<h2>Place Grenette</h2>
+<h2>{% trans "Place Grenette" %}</h2>
 <p>
+{% blocktrans %}
 	Au Moyen-Âge, cette place était un champ où se en les foires aux grains, d'où le nom de Grenette. Située en plein coeur du centre ville historique et commerçant, elle est devenue une zone piétonne envahie par les terrasses des cafés et des restaurants en été et transformée en petit marché de Noël l'hiver. A voir: La fontaine aux dauphins (ou Lavalette) réalisée en 1824.
+{% endblocktrans %}
 </p>
 {% endblock %}
