--- a/www/Templates/Front/About.html
+++ b/www/Templates/Front/About.html
@@ -5,60 +5,86 @@
 
 {% block content %}
 <div id="about-us" class="styled_box">
-<h1>{% trans "Le restaurant" %}</h1>
+<h1>{% trans "The restaurant" %}</h1>
 
 <p>
 {% blocktrans %}
-	Poussez les portes du restaurant Le paradis Francais et laissez-vous porter par l’atmosphère chaleureuse et reposante du lieu. Avec son décor sobre, design et raffiné, cet établissement est un réel havre de paix.
-
-	Au menu, vous pourrez profiter de la cuisine française traditionnelle que le Chef compose avec savoir-faire et expérience. La carte affiche également quelques spécialités auvergnates goûteuses et gourmandes.
-
-	Aux beaux jours, vous pourrez vous délecter de vos savoureux mets en terrasse tout en profitant du soleil. Et, pour vos événements festifs, la direction permet la privatisation du lieu.
-	Une adresse qui vaut le détour et qui ne manquera pas de séduire tous les amateurs de gastronomie ! À connaître et à faire connaître…
+		Walk in the restaurant "Le Paradis Français" et embrace the friendly
+	and calming atmosphere there is. With its elegant and refined design,
+	this place is a house of heavenly peace. On the menu, you'll find
+	traditional French cuisine prepared by our experienced Chef. You'll
+	also find some delicious "Auvergnate" specialties. When the sun comes
+	out, you'll be able to enjoy all your favorite specialties on our
+	deck. We also allow people to rent the restaurant for any private
+	events. A place that every amateur of tasty food definitely has to go
+	to. Let your friends know.
 {% endblocktrans %}
 </p>
 
-<h1>{% trans "Le personnel" %}</h1>
+<h1>{% trans "The employees" %}</h1>
 <p>
 {% blocktrans %}
-	Votre satisfaction ... un travail d'équipe
-
-	La préparation des aliments est assurée dans les restaurants gastronomiques par un ensemble de cuisiniers : la brigade.
-	L’équipe de salle organise le restaurant en vue du service, afin d’accueillir les clients avec élégance.
-	Chef de cuisine: 
-	Bras droit du chef: 
-	Responsable propreté: tous
-	Maître d'hôtel: 
-	Sommelier: 
-	Maitre restaurateur:
-	Associés:.cla
+		Your satisfaction ... a teamwork. The preparation of all our dishes is
+	guaranteed by a team of chef known as: The brigade. This team
+	organizes the restaurant in order for the clients to have the best
+	experience possible incorporating elegance, class and , of course
+	tasty food.
 {% endblocktrans %}
 </p>
-<h1>{% trans "Tourisme" %}</h1>
+<h1>{% trans "Tourism" %}</h1>
 
 <h2>{% trans "Grenoble" %}</h2>
 <p>
 {% blocktrans %}
-	Entouré des massifs du Vercors, de la Chartreuse et de la chaîne de Belledonne, Grenoble bénéficie d’un cadre idyllique. Stendhal décrivait ainsi sa ville natale : « Au bout de chaque rue, une montagne… ». La capitale des Alpes est donc particulièrement appréciée pour sa proximité avec les montagnes et les stations de ski.
+		Surrounded by the Vercors, Chartreuse and the Belledonne mountain
+	chain, Grenoble benefits an incredible landscape as Stendhal was
+	saying about his native town: "At the end of every avenue, a
+	mountain".
 {% endblocktrans %}
 </p>
  
 <h2>{% trans "La Bastille" %}</h2>
 <p>
 {% blocktrans %}
-	Cet ancien site fortifié est très apprécié des touristes et des Grenoblois. Il s'agit d'une construction militaire édifiée entre 1823 et 1848 dont les remparts, les casemates et les escaliers s'étendent sur près de 300 mètres de dénivelé. Elle offre un panorama exceptionnel sur l'agglomération de Grenoble et accueille 600 000 visiteurs par an. La moitié d'entre eux y accède par le téléphérique. Construit en 1934, c'est le premier téléphérique urbain au monde. Il est célèbre aujourd'hui pour ses cabines en forme de bulles transparentes, indissociables de l'image de la ville. La forteresse est aussi accessible à pied depuis la porte Saint Laurent ou en empruntant la montée Chalemont, via un sentier doté d'un parcours-santé, mais également à partir de la porte de France, en passant par le Jardin des Dauphins, perché sur une falaise. A faire: Monter sur la terrasse de la forteresse pour lire le paysage grâce aux tables d'orientation. Aller jusqu'au mémorial des Troupes alpines au sommet du mont Jalla à 635 m. Essayer la via ferrata située sur les falaises ouest, l'un des rares parcours en site urbain.
+		« I haven't the strength to describe the admirable view, which changes
+	every hundred steps, that one enjoys from the Bastille... » It is with
+	these words that Stendhal paid hommage to the site.
+	The Bastille is visited by some 600,000 people each year,
+	approximately half of whom take the cable car from the city centre.
+	The rest of the visitors go by car up the steep and narrow road from
+	La Tronche, or on foot by one of the numerous signposted paths to
+	reach the Bastille.
+	In 2005 the Bastille underwent substantial works in order to make the
+	entirety of the site accessible to persons of reduced mobility. It is
+	the setting for numerous exhibitions and social and cultural events,
+	while also being the destination of an annual cycle race (La Prise De
+	La Bastille) and a via ferrata (Les Prises De La Bastille).
+	To do: Hike to the fortress deck to have a great view on the city
 {% endblocktrans %}
 </p>
 <h2>{% trans "Le Jardin de ville" %}</h2>
 <p>
 {% blocktrans %}
-	Situé au coeur de la ville, cet espace vert est un havre de fraîcheur et de tranquilité. De nombreux bancs y sont disposés à l'ombre de platanes centenaires, tandis qu'en contre-bas, se trouve une roseraie avec quatre carrés d'herbes. A côté d'une aire de jeux pour enfants, un kiosque à musique datant de l'entre deux guerres sert de petite scène pour diverses occasions et notamment lors du festival Le Cabaret Frappé qui a lieu chaque été. C'est le Connétable de Lesdiguières qui conçut ce jardin en 1622. On y accède de la place Grenette en passant sous un porche, ce qui nous amène devant une statue de bronze, la Fontaine du Torrent. A voir: Les balustrades, les vases ornementaux et les trois fontaines abreuvoirs soutenant l'extrémité du parc La Fontaine du Torrent. Le Musée Stendhal.
+		At the center of the city, that green garden is a heavenly place for
+	anyone searching calm and tranquility. There is numerous benches to
+	benefit the shadows of very old trees while downhill you'll find
+	square parks to enjoy. Nearby there is also a playground for your
+	kids, a music kiosk dated from in between the world wars used for
+	various celebrations. This garden was built in 1622 by "le Connétable
+	de Lesdiquières". in order to get there from Place Grenette you'll
+	have to pass under a small porch taking you in front of a bronze
+	statue called Fontaine du Torrent.
 {% endblocktrans %}
 </p>
 <h2>{% trans "Place Grenette" %}</h2>
 <p>
 {% blocktrans %}
-	Au Moyen-Âge, cette place était un champ où se en les foires aux grains, d'où le nom de Grenette. Située en plein coeur du centre ville historique et commerçant, elle est devenue une zone piétonne envahie par les terrasses des cafés et des restaurants en été et transformée en petit marché de Noël l'hiver. A voir: La fontaine aux dauphins (ou Lavalette) réalisée en 1824.
+		In middle age, this place was a land used for cereals and gave it its
+	name. Right in the middle of the city's historical center it later
+	became a walk only street filled with café's and restaurant's decks
+	transformed into a winter market as the snow starts to fall on the
+	city.
+	To see: La fontaine aux dauphins (or lavalette) built in 1824
 {% endblocktrans %}
 </p>
 {% endblock %}
